2005-03-05  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (func_m4ChangeLog_init, func_m4ChangeLog_finish):
	Keep track whether a $m4dir/ChangeLog file was created.
	Don't create a $m4dir/Makefile.am if aclocal version 1.8 or newer is
	present; instead add $m4dir/ChangeLog to EXTRA_DIST if needed.
	Reported by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-05  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: When adding items to EXTRA_DIST, SUBDIRS,
	DIST_SUBDIRS, ACLOCAL_AMFLAGS in Makefile.am, optionally remove one
	space after the added items. When adding items to AC_CONFIG_FILES,
	AC_OUTPUT in configure.ac, remove don't insert an extra space after
	the added items.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-05  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Emit brackets around the argument of
	AM_GNU_GETTEXT_VERSION.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-05  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Don't recommend to add AM_GNU_GETTEXT([external])
	when it is already present.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.

2005-03-05  Bruno Haible  <bruno@clisp.org>

	Remove old sh, tcl, perl interfaces.
	* gettext-sh: Remove file.
	* tcl_gettext.c, README-Tcl: Remove files.
	* gettext.perl: Remove file.
	* Makefile.am (EXTRA_DIST): Remove them.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Update for 0.14.2.

2005-02-07  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Use LC_ALL=C to protect range expression against
	Estonian locale.
	* gettextize.in: Likewise.

2005-02-05  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Check the version number, instead of relying on cvs
	for doing so.
	Reported by Paul Eggert.

2005-01-10  Bruno Haible  <bruno@clisp.org>

	Security fixes.
	* autopoint.in: Exit if the creation of one of the temporary